Fix separator alignment issue & fix image resizing issue

--- a/css/article.css
+++ b/css/article.css
@@ -1,15 +1,20 @@
 article {
   display: flex;
+  width: 100%;
+  height: 100%;
   padding: 10px;
   border-top: 3px ridge aqua;
 }
 
 img {
-  width: 50%;
-  height: 100%;
+  width: 960px;
+  height: 480px;
+  border: 3px ridge aqua;
 }
 
 details {
   display: inline;
   text-align: center;
+  width: 50%;
+  height: 100%;
 }
