--- a/css/header-nav.css
+++ b/css/header-nav.css
@@ -30,7 +30,7 @@
   right: 20px;
   background-color: black;
   color: white;
-  font-size: 24px;
+  font-size: 28px;
   width: 40px;
   height: 40px;
   margin-left: 50px;
