--- a/css/modal.css
+++ b/css/modal.css
@@ -32,7 +32,7 @@
 #modal-close {
   color: white;
   float: right;
-  font-size: 24px;
+  font-size: 28px;
   height: 30px;
   vertical-align: middle;
   font-weight: bold;
